--- a/.github/workflows/manage-repo.yml
+++ b/.github/workflows/manage-repo.yml
@@ -27,15 +27,16 @@ env:
   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
   ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
   ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
   GITHUB_OWNER: pecarmopaas
 
 jobs:
   manage_repo_tf:
     name: Manage Repository Terraform
     runs-on: ubuntu-latest
-    permissions: write-all
-      
+    permissions: 
+      write-all
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
