--- a/.github/workflows/manage-repo.yml
+++ b/.github/workflows/manage-repo.yml
@@ -22,6 +22,10 @@ on:
         required: true
         type: boolean
 
+permissions:
+  contents: write
+  id-token: write
+
 env:
   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
